welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:4: error: value Green is not a member of object java.awt.Color
    if (getCouleurSol()==Color.Green){
                               ^SlugTracking:5: error: type mismatch;
 found   : Unit
 required: Boolean
    	avance()
              ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
    if (getCouleurSol()==Color.Green){
    ^